# lambda360order

./: .gitignore  AGENTS.md  BUCKET.md  DISCUSS.md  OPENCASCADEJS_IS_ENOUGH.md  README.md  index.html  makefile  next.config.ts  package-lock.json  package.json  次の指示.md
.claude/: settings.local.json
api/: Cargo.toml  Dockerfile  DockerfileAsBuilder  Makefile  makefile
api/examples/: colored_box.brep  colored_box.step  generate.rs
api/src/: content_hash.rs  encode.rs  main.rs  openapi.rs  server.rs  shape.rs  shape_stretch.rs  shape_to_glb.rs  step_to_brep.rs  upload.rs
app/: layout.tsx  page.tsx
app/step/: page.tsx
aws/: Makefile  TASK.md  cdk.json  makefile  package-lock.json  package.json
demos/: Cargo.toml  main.rs  template.html
docs/: 20250212-BREP高速化成果.md  20250212-見込み客.md  20250310-Form化.md  20260210-FRONTEND.md  20260212-UX.md  20260212-ビジネス価値と批判.md  20260212-埋め込み方式の技術比較.md  20260214-GLTFGLB 出力機能の調査報告.md  20260214-自動生成httpクライアント.md  20260216-ブログ記事用：AI時代の差別化要素.md  20260217-伸縮機能.md  20260217-演算定義.md  20260219-mandolinを改良してShapeNodeに対応させる.md  20260220-api設計.md  20260220-glbファイルサイズについて.md  20260221-ShapeNode全演算実装.md  20260222-ngoni-S3Storage-Clone提言.md  20260222-変換apiの戦略.md  20260222-変換apiの戦略2.md  20260222-変換機能実装完了時のログ.md  20260223-lambda360shapeの実装計画.md  20260223-いずれリファクタリングしたい問題.md  20260223-リファクタリングと新機能追加.md  20260224-OCCTRSフォーク担当エージェントへの要望書.md  20260224-Stretch実装引継ぎ.md  20260224-shape_stretchフィラー生成バグ修正.md  20260225-lambda360viewシームレスモデル切替対応要望.md  20260225-lambda360viewローディング状態管理の委譲要望.md  20260225-板金箱発注画面実装プラン.md  20260226-windows-mingw-static-linking.md  20260228-B2B向け発注コンフィグレーションの実装評価.md  20260228-OCCTRSフォーク担当エージェントへの要望書.md  20260228-今後やるべきこと.md  20260302-chijin改善提案.md  20260302-truck移植案.md  20260302-使用OCC機能一覧.md  20260303-課題④ESMとIIFEの同時NPM公開について.md  20260304-chijin-color機能統合計画.md  20260304-chijin-issue-per-face-mesh.md  20260310-unpkg-jsdelivrでデモ配布.md  (+8 more)
embedded/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
frontend/: .gitignore  Makefile  index.html  next.config.ts  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
openapi/: README.md  lib.js  main.tsp  makefile  package-lock.json  package.json
public/: hexapod.glb  main.js  openapi.json  widget.js  楕円-bd405c4e4cd565154134b09ed3dc350bec22d1dac86d98b390a1803a485d146b.step
sandbox-frontend/: Makefile  README.md  next.config.ts  package-lock.json  package.json
sandbox-opencascade-js/: .gitignore  Makefile  README.md  package-lock.json  package.json  結論.md
sandbox-opencascade-rs/: .gitignore  CACHE.md  Cargo.toml  Makefile  README.md  build_log.txt  自作.md
sandbox-opencascade-rs/src/: main.rs
sandbox-stream-api/: .gitignore  Cargo.toml  Dockerfile  makefile  openapi.json
sandbox-stream-api/examples/: generate.rs
sandbox-stream-api/src/: main.rs  openapi.rs  server.rs
widget/: Makefile  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
(+141 files in other folders)
