[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
gltf = "1.4"
gltf-json = { version = "1.4.1", features = ["extras"] }
opencascade = { git = "https://github.com/lzpel/opencascade-rs", version = "0.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ngoni = "^0.1.7"
sha2 = "0.10"
serde_json_canonicalizer = "0.3"

[dev-dependencies]
mandolin = "0.4.0-alpha.5"
openapiv3 = "2.2"
serde_json = "1.0"