[package]
name = "api"
version = "0.1.0"
edition = "2024"

[features]
frontend = ["rust-embed", "mime_guess"]

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
futures-util = "0.3.31"
gltf = "1.4"
gltf-json = { version = "1.4.1", features = ["extras"] }
glam = "0.24"
opencascade = { git = "https://github.com/lzpel/opencascade-rs", version = "0.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
ngoni = "^0.1.7"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
serde_json_canonicalizer = "0.3"
# frontend 埋め込み用
rust-embed = { version = "^8", optional=true }
mime_guess = { version = "^2", optional=true }

[dev-dependencies]
mandolin = "0.4.0-alpha.6"