[package]
name = "sandbox-stream-api"
version = "0.1.0"
edition = "2024"

[[example]]
name = "generate"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mandolin = "0.4.0-alpha.5"
openapiv3 = "2.2"
serde_json = "1"
